# polygon-mcp-server

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  FASTMCP_DEPLOYMENT.md  POLYGON_OPTIONS_ENHANCEMENT_GUIDE.md  Procfile  README.md  claude_desktop_config.json  deploy.sh  fastmcp.yaml  market_parser_demo.py  polygon_mcp_server.py  polygon_mcp_server_clean.py  polygon_mcp_server_sse.py  polygon_mcp_server_stdio.py  pyproject.toml  railway.json  run_mcp_stdio.py  start_mcp_server.py  test_mcp_server.py
